// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> Should render and match the snapshot 1`] = `
.c1 {
  width: auto;
  height: auto;
  margin-right: 15px;
  cursor: pointer;
}

.c0 {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9F1FB;
  cursor: pointer;
}

<div>
  <div
    class="c0 custom-option"
  >
    <img
      class="c1"
      src="IMAGE_MOCK"
    />
    <span>
      test
    </span>
  </div>
</div>
`;

exports[`<Option /> Should render and match the snapshot 2`] = `
.c1 {
  width: auto;
  height: auto;
  margin-right: 15px;
  cursor: pointer;
}

.c0 {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9F1FB;
  cursor: pointer;
}

<div>
  <div
    class="c0 custom-option"
  >
    <img
      class="c1"
      src="IMAGE_MOCK"
    />
    <span>
      test2
    </span>
  </div>
</div>
`;
